Finished code for reading sensor

--- a/configuration.ini
+++ b/configuration.ini
@@ -1,3 +1,20 @@
-[Email]
-email = <email>
-password = <password>
+[Notify]
+# This section defines settings for the notifiers.
+# Recipient List, Credentials.
+#	Recipient List: Takes a list of emails to notify
+#	Credentials: Takes a pair of username and password to send the notifications from.
+notify_0_settings = [["happyguyhere@hotmail.com"], ["email", "password"]]
+
+
+[Sensor]
+# This section defines settings for the sensors
+# Thresholds are represented as Volumetric Water Content
+# Pin, Id, Nickname, Dry Threshold, Wet Threshold, Mode.
+#	Pin: Pin number to get the sensor reading from.	
+#	Id: A uniquq id number for the sensor.
+#	Nickname: A nickname for the sensor.
+# 	Dry Threshold: VWC dry threshold.
+#	Wet Threshold: VWC wet threshold.
+#	Mode: 1 - normal, 2 - record, 3 - record data range
+sensor_0_settings = [5, 0, "Sesnor 0", 10, 35, 1]
+sensor_1_settings = [7, 1, "Sesnor 1", 10, 35, 1]
